<resources>
    <string name="app_name">Personal Info</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="type_courses">Please type courses.....</string>
    <string name="select_age">Select Age</string>
    <string name="submit">Submit</string>
    <string name="date">Date</string>
    <string name="data">data</string>
    <string name="Failed">Failed</string>
    <string name="image_button">Image Button</string>
    <string name="zero">0</string>
    <string name="gallery">Gallery</string>
    <string name="camera">CAMERA</string>
    <string name="splashscreen">SplashScreen</string>
</resources>